# openapi/openapi.yaml
@@ -27,7 +27,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              type: object
+              properties:
+                task:
+                  type: string
+                is_done:
+                  type: boolean
+                user_id:
+                  type: integer
+                  format: uint
       responses:
         '201':
           description: The created task
@@ -35,6 +43,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+  /tasks/user/{user_id}:
+    parameters:
+      - name: user_id
+        in: path
+        required: true
+        description: The id of the user to fetch tasks for
+        schema:
+          type: integer
+          format: uint
+    get:
+      summary: Get all tasks for a specific user
+      tags:
+        - tasks
+      responses:
+        '200':
+          description: A list of tasks for the specified user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User not found
   /tasks/{id}:
     parameters:
       - name: id
@@ -134,7 +166,7 @@ paths:
                 email:
                   type: string
                 password:
-                  type: string # Измените на строку, так как пароль обычно хранится как строка
+                  type: string
       responses:
         '200':
           description: The updated user
@@ -155,23 +187,27 @@ paths:
           description: User not found
 components:
   schemas:
-    Task:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64  # Обычно используется standard int64 для ID
-        task:
-          type: string
-        is_done:
-          type: boolean
     User:
       type: object
       properties:
         id:
           type: integer
-          format: int64  # Обычно используется standard int64 для ID
+          format: int64
         email:
           type: string
         password:
-          type: string # Изменено на строку
+          type: string
+    Task:
+      type: object
+      properties:
+        user_id:
+          format: int64
+          type: integer
+        id:
+          type: integer
+          format: int64
+        task:
+          type: string
+        is_done:
+          type: boolean
+
